src/test/ui/issues/issue-42796.nll.stderr
error[E0382]: borrow of moved value: `s`
  --> $DIR/issue-42796.rs:18:20
   |
LL |     let mut s_copy = s;
   |                      - value moved here
...
LL |     println!("{}", s); //~ ERROR use of moved value
   |                    ^ value borrowed here after move
   |
   = note: move occurs because `s` has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
